Perubahan fungsi ikon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="fungsi2">Cuaca</string>
     <string name="fungsi3">Profile</string>
     <string name="fungsi4">Nilai</string>
-    <string name="fungsi5">Music</string>
-    <string name="fungsi6">Transcript</string>
+    <string name="fungsi5">Map</string>
+    <string name="fungsi6">Telpon</string>
     <string name="fungsi7">Saran</string>
     <string name="fungsi8">Setting</string>
     <string name="fungsi9">About Us</string>
